Fix double scroll bar issue on mobile browsers

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,13 +2,12 @@
 :root {
   --form-max-width: 530px;
   --navbar-height: 58px;
-  --main-container-height: calc(100vh - var(--navbar-height));
 }
 
 /* Global */
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* NavBar */
@@ -36,6 +35,7 @@ svg[data-icon="x-twitter"] {
 .centered-column-grid {
   margin-top: var(--navbar-height);
   height: calc(100vh - var(--navbar-height));
+  height: calc(100dvh - var(--navbar-height));
   overflow: auto;
   display: grid;
   justify-content: center;
@@ -45,6 +45,7 @@ svg[data-icon="x-twitter"] {
 .main-content-column {
   margin-top: var(--navbar-height);
   height: calc(100vh - var(--navbar-height));
+  height: calc(100dvh - var(--navbar-height));
   overflow: auto;
 }
 
